--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
+
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ url_for('index') }}">FitTrack</a>
     <div>
@@ -35,3 +36,22 @@
 <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
+
+
+<div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm delete</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete "<span id="confirm-delete-item-name"></span>"?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger" id="confirmDeleteBtn">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
