--- a/templates/login.html
+++ b/templates/login.html
@@ -12,4 +12,7 @@
   </div>
   <button class="btn btn-primary" type="submit">Log in</button>
 </form>
+<div class="mt-3">
+  <a href="{{ url_for('reset_password') }}">Forgot Password?</a>
+</div>
 {% endblock %}
