--- a/templates/meals.html
+++ b/templates/meals.html
@@ -6,7 +6,7 @@
   <div class="col-md-6">
     <div class="input-group">
       <input name="name" id="meal-name-input" placeholder="Meal name" class="form-control" required>
-      <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#selectMealModal">Select Meal</button>
+      <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#selectMealModal">Add Meal</button>
     </div>
   </div>
   <div class="col-md-2">
@@ -102,7 +102,7 @@
       </div>
       <div class="modal-body">
         <p class="small text-muted">Remove favorites you no longer want to see in the suggestions.</p>
-        <div class="list-group">
+        <div class="list-group" style="max-height: 400px; overflow-y: auto;">
           {% for f in favorites %}
             <div class="list-group-item d-flex justify-content-between align-items-center">
               <div>
@@ -135,7 +135,7 @@
       </div>
       <div class="modal-body">
         <p class="small text-muted">Remove frequently entered meals you no longer want to see in the suggestions.</p>
-        <div class="list-group">
+        <div class="list-group" style="max-height: 400px; overflow-y: auto;">
           {% for s in suggestions %}
             {% if not s.is_favorite %}
               <div class="list-group-item d-flex justify-content-between align-items-center">
